Configuring to SCSS instead of plain CSS

--- a/templates/style.css
+++ b/templates/style.css
@@ -61,7 +61,7 @@ img {
 }
 
 a {
-  color: #0a4;
+  color: #cd2729;
   outline: 0 none;
   text-decoration: none;
   text-rendering: optimizelegibility;
