--- a/manuscript/page-3/body.haml
+++ b/manuscript/page-3/body.haml
@@ -1,12 +1,6 @@
-%header.tape.flex
-  .chapter.flex Chapter 1
-  .chaptername Introduction
-
-%main.leaf.flex
+.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %i.fa.fa-github.large
+    %p 
+      Fork the book on  
+      %a{ href: "https://github.com/marvindanig/a-guide-to-marketplaces" } Github
