template fixes and repo url fixed

--- a/crust/style/book.css
+++ b/crust/style/book.css
@@ -51,6 +51,7 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    background-color: aliceblue;
 }
 
 .viewer {
