--- a/templates/style.scss
+++ b/templates/style.scss
@@ -3,7 +3,7 @@
 html, body {
   font-size: 3.2vw;
   color: #2f2f2f;
-  background-color: #f9f7f1;
+  background-color: #fff;
   font-family: 'Playfair Display', serif;
   margin: 0 0;
   overflow: hidden;
@@ -143,7 +143,7 @@ a {
 .tape div.chapter {
   width: 20vw;
   height: 5vh;
-  background: gray;
+  background: #ef8683;
   color: white;
 }
 
