better resolution for list of marketplaces

--- a/manuscript/page-6/body.haml
+++ b/manuscript/page-6/body.haml
@@ -1,12 +1,10 @@
 %header.tape.flex
-  .chapter.flex Chapter 1
-  .chaptername Introduction
+  .chapter.flex Preface 
+  .chaptername Second Edition
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p It is now over two years since we published the first edition of “A Guide to Marketplaces.” It was our first experience with this kind of project and we weren’t quite sure what to expect. We wondered if anyone would read or find the book at all. But we knew that marketplaces were an important part of our portfolio and investment thesis, and felt that the existing content geared toward marketplace startups was fragmented and sometimes inconsistent.
+
+    %p We were surprised by the book’s incredible reception. It has been downloaded more than 25,000 times since publication and was translated into Japanese. And, we have received countless thank you emails from founders and others — we have appreciated each and every note.
+    %p Two years is a long time in the tech world. Since we first published the book, millions of dollars have poured into blockchain projects and cryptocurrencies. We have also seen marketplaces evolve from products, to services, to information. At the same time, our work with founders and startups has continued to inform our understanding of the challenges and opportunities that marketplaces face. As such, we realized it was time to refresh the guide.
