--- a/manuscript/page-7/body.haml
+++ b/manuscript/page-7/body.haml
@@ -1,12 +1,12 @@
 %header.tape.flex
-  .chapter.flex Chapter 1
-  .chaptername Introduction
+  .chaptername.right Second Edition
+  .chapter.flex Preface 
 
-%main.leaf.flex
+
+%main.leaf
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p We have retained much of the previous organization, and have aimed to keep it a quick and easy read. Major additions include an entirely revised section on decentralized marketplaces as well as marketplace exits. And throughout the book, examples have been updated as needed. We hope you find the second edition as useful as the first.
+
+    .right
+      .subhead.uppercase — Angela Tran Kingyen & Boris Wertz
+      .subhead San Francisco, CA - Friday, March 30, 2018 - Seven Leafs
