--- a/manuscript/page-8/body.haml
+++ b/manuscript/page-8/body.haml
@@ -1,12 +1,13 @@
 %header.tape.flex
   .chapter.flex Chapter 1
-  .chaptername Introduction
+  .chaptername Introduction to Marketplaces
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %h1 INTRODUCTION
+    %p 
+      %strong 
+        The web changes everything.&nbsp;
+      In just 25 years, the Internet has become so ubiquitous that it’s hard to remember how things were done before.
+    %p Nowhere is this more true than with how goods and services are exchanged. Not too long ago, the marketplace was a purely local affair. Artisans and farmers brought their goods to the local marketplace to be sold. But when the marketplace moved online, it shattered the very notion of local and global. You’re now able to buy anything and everything with just a few clicks, and vendors have unprecedented access to a global audience.
+    %p Let’s take books as an example. Used and rare books were once limited to tiny backstreet sellers. If they were lucky, book-lovers might happen upon a prized out-of-print edition while browsing the aisles. Moving the process online brought about a radical shift. You just need to type in an author’s name and title, and scores of choices will pop up from booksellers all over the world. If there’s a book out there, it can be found. 
