--- a/manuscript/page-4/body.haml
+++ b/manuscript/page-4/body.haml
@@ -1,12 +1,8 @@
-%header.tape.flex
-  .chapter.flex Chapter 1
-  .chaptername Introduction
+.leaf.flex
+  .inner.center
+    %img{ src: "https://raw.githubusercontent.com/bookiza/bookiza.cli/master/assets/images/bookiza.png", width: "40%" }/
+    %p 
+      Baked with 
+      %a{ href: "http://bookiza.io" } Bookiza
 
-%main.leaf.flex
-  .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+
