--- a/manuscript/page-5/body.haml
+++ b/manuscript/page-5/body.haml
@@ -1,12 +1,14 @@
-%header.tape.flex
-  .chapter.flex Chapter 1
-  .chaptername Introduction
-
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %h1 PREFACE 
+    %p.center TO 
+    %h1 THE SECOND EDITION
+    .copyright
+      %hr
+      %p — Angela Tran Kingyen & Boris Wertz
+      %p San Francisco, CA - March 2018. 
+      %p ©2018 Version One Ventures. All rights reserved. 
+      %p All trademarks are the property of their respective owners.
+
+
+
