--- a/manuscript/page-12/body.haml
+++ b/manuscript/page-12/body.haml
@@ -4,9 +4,4 @@
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %img.overlay{ src: "https://raw.githubusercontent.com/marvindanig/a-guide-to-marketplaces/master/assets/images/background06.jpg", width: "100%"}/
