--- a/manuscript/page-14/body.haml
+++ b/manuscript/page-14/body.haml
@@ -4,9 +4,8 @@
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %h4 1. Marketplaces aggregate many sellers and their inventory
+    %p What sets a marketplace apart from a standard e-commerce site is that the goods and services are supplied by a third party. In most cases, the marketplace platform acts as a type of digital middleman.
+    %p The independence of suppliers is an increasingly grey area when it comes to service marketplaces. Most on-demand service marketplaces like Uber, Handy, and Postmates stress the independence of their workforce, while other startups like Munchery in San Francisco and MyClean in New York switched to full-time employees, in order to gain more control over the customer experience.
+    %h4 2. Marketplaces include a transaction element
+    %p A marketplace differs from a listing site by taking care of at least part of the transaction between buyer and seller. A true marketplace like eBay and Uber manages the entire transaction, from listing to payment processing (with the service and goods delivered offline).
