--- a/manuscript/page-15/body.haml
+++ b/manuscript/page-15/body.haml
@@ -4,9 +4,11 @@
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p For the purpose of this handbook, we’re also including those marketplaces where transactions are initiated but not processed on the platform — for example, lead generation sites like Thumbtack where providers send quotes through the platform. By contrast, a review site like Yelp is not a marketplace, since there’s generally no transactional element involved.
+
+    %h2.center MARKETPLACE TYPES
+    %p A marketplace can be categorized in terms of its participants (on both the supply and demand side):
+    %ul
+      %li P2P (peer-to-peer): This is a grassroots transaction where private individuals sell their goods to peers. For example, the early days of eBay and Airbnb were dominated by private individuals.
+      %li B2C (business-to-consumer): As a marketplace gains traction, its seller base inevitably professionalizes as two things happen: 1) existing businesses see the opportunity and sign on to the platform and 2) private individuals find success on the marketplace and formalize their activities into a business.
+    .right [Contd.]
