--- a/manuscript/page-13/body.haml
+++ b/manuscript/page-13/body.haml
@@ -4,9 +4,8 @@
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %h2.center WHAT’S A MARKETPLACE?
+    %p An online marketplace is a type of e-commerce site that connects those looking to provide a product or service (sellers) with those looking to buy that product or service (buyers). These buyers and sellers may have had trouble finding each other before, and thus the marketplace creates efficiency in an otherwise inefficient market.
+    %p eBay’s launch in 1995 sparked the first wave of product-focused marketplaces, and Uber’s success in 2010 brought a second wave of marketplaces for services, and combinations of product and service marketplaces (such as food delivery). And today, we’re approaching a third wave of information marketplaces fueled by blockchain technology.
+    %p With the explosion of marketplaces, there are now sites to connect bands with music venues, homeowners with snow plowing services, and students with used textbooks.
+    %p While these marketplaces spread across diverse market segments, there are two common elements to every online marketplace.
