--- a/manuscript/page-16/body.haml
+++ b/manuscript/page-16/body.haml
@@ -4,9 +4,5 @@
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+  	%ul
+      %li B2B (business-to-business): While B2B marketplaces have lagged behind P2P and B2C, this is now a fast-growing segment. Alibaba is the biggest player in the group, and we’re seeing the emergence of a new wave of B2B startups, such as Kinnek, focused on making procurement and supply chains more efficient for the long-tail SMB market.  		  	}
