--- a/manuscript/page-16/body.haml
+++ b/manuscript/page-16/body.haml
@@ -2,7 +2,10 @@
   .chapter.flex Chapter 1
   .chaptername Introduction
 
-%main.leaf.flex
+%main.leaf
   .inner.justify
-  	%ul
-      %li B2B (business-to-business): While B2B marketplaces have lagged behind P2P and B2C, this is now a fast-growing segment. Alibaba is the biggest player in the group, and we’re seeing the emergence of a new wave of B2B startups, such as Kinnek, focused on making procurement and supply chains more efficient for the long-tail SMB market.  		  	}
+    %ul
+      %li B2B (business-to-business): While B2B marketplaces have lagged behind P2P and B2C, this is now a fast-growing segment. Alibaba is the biggest player in the group, and we’re seeing the emergence of a new wave of B2B startups, such as Kinnek, focused on making procurement and supply chains more efficient for the long-tail SMB market.             
+
+
+    %img.overlay{ src: "https://raw.githubusercontent.com/marvindanig/a-guide-to-marketplaces/master/assets/images/background08.jpg", width: "100%"}/
