--- a/manuscript/page-17/body.haml
+++ b/manuscript/page-17/body.haml
@@ -1,12 +1,15 @@
 %header.tape.flex
+  .chaptername.right Introduction to Marketplaces
   .chapter.flex Chapter 1
-  .chaptername Introduction
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %h2.center TWO METRICS FOR ANY MARKETPLACE
+    %p We’ll discuss marketplace metrics in detail in Chapter 5, but the two key metrics for any marketplace startup to understand are:
+    %h4 1. GMV (Gross Merchandise Value): 
+    %p GMV is simply the total dollar value of everything sold through the marketplace in a given time period. This is a different and much bigger number than the platform’s revenue.
+    %p Net merchandise value is GMV minus the value of returns (products) or cancellations (services).
+    %p • Accurately calculating GMV can be tricky for marketplaces where transactions are initiated on the platform but completed offline.
+
+    %h4 2. Take Rate:
+    %p Take rate is the percentage of transaction value that the marketplace collects in fees. Setting the take rate is typically the cornerstone of a marketplace’s monetization and business model.
