--- a/manuscript/page-18/body.haml
+++ b/manuscript/page-18/body.haml
@@ -4,9 +4,13 @@
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %ul
+      %li The more value a marketplace provides, the more it’s able to charge in fees. For example, if a marketplace enables suppliers to find new buyers, then suppliers are more likely to tolerate higher fees.
+      %li The more fragmented the overall market, the higher a marketplace’s take rate can be. That’s because high fragmentation reduces the negotiation power of marketplace participants.
+      %li When transactions are concluded offline, it’s hard for a marketplace to track those transactions and monetize based on take rate. In Chapter 3, we’ll discuss other monetization strategies for these situations.
+      
+    %h2.center SELECTING THE RIGHT MARKET
+    %p Bill Gurley of Benchmark Capital wrote the definitive post on which markets are the best fit for marketplaces: 
+    %a{ rel: "nofollow", href: "http://abovethecrowd.com/2012/11/13/all-markets-are-not-created-equal-10-factors-to-consider-when-evaluating-digital-marketplaces/"} "All Markets Are Not Created Equal: 10 Factors To Consider When Evaluating Digital Marketplaces.” 
+
+    %p While Bill laid out ten factors, we believe six to be essential:
