--- a/manuscript/page-21/body.haml
+++ b/manuscript/page-21/body.haml
@@ -1,12 +1,15 @@
 %header.tape.flex
+  .chaptername.right Introduction to Marketplaces
   .chapter.flex Chapter 1
-  .chaptername Introduction
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %ol{ start: "4"}
+      %li 
+        %h5 Total Available Market (TAM)
+        %p As with any new business opportunity, a proper TAM analysis is imperative: how big is the total available market and how much can you capture? Keep in mind that the best online marketplaces create new value; therefore, the current market size does not necessarily paint an accurate picture of the opportunity.
+        %p For example, Uber’s convenience has greatly expanded the car service market to more users and geographic locations. Gurley gives an excellent analysis on Uber’s impact on the overall market size of the car-for-hire transportation market.
+      %li 
+        %h5 Transactional: being part of the payment flow
+        %p When buyers and sellers need the marketplace to exchange money, the potential take rate is much higher than when transactions happen offline. Think about it this way: When a marketplace handles the transaction, it pays the supplier their portion of the revenue with the fees automatically deducted, instead of having to send them a bill at a later date. This makes fees much more palatable to most sellers.
+
