--- a/manuscript/page-23/body.haml
+++ b/manuscript/page-23/body.haml
@@ -1,12 +1,17 @@
 %header.tape.flex
+  .chaptername.right Introduction to Marketplaces
   .chapter.flex Chapter 1
-  .chaptername Introduction
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p And, people who never thought they’d transport people for money are now drivers on Uber. These platforms empower whole new groups of people to become sellers. More sellers = more participation on the platform = more liquidity = more transactions = more overall value.
+    %p 
+      You don’t need to hit all six criteria (or 
+      %a{ href: "http://abovethecrowd.com/2012/11/13/all-markets-are-not-created-equal-10-factors-to-consider-when-evaluating-digital-marketplaces/"} all ten on Bill’s list
+      ) to build a good marketplace. But the better you score, the higher the overall potential of the marketplace. And underlying all these six factors we consider the magnitude of potential value creation.
+
+
+    %h2.center SUCCESS FACTORS: HOW TO WIN AGAINST THE INCUMBENT
+    %p The narrative of the little guy going up against the giant is baked into the culture of Silicon Valley. There’s always an incumbent marketplace (even if it’s Craisglist), so finding the right business model to break into an existing market is critical for any new marketplace.
+
+    %p Any newcomer should focus on the incumbent’s most important weakness and that weakness will be different for each situation. Some of the common strategies are:
