--- a/manuscript/page-25/body.haml
+++ b/manuscript/page-25/body.haml
@@ -1,12 +1,16 @@
 %header.tape.flex
+  .chaptername.right Introduction to Marketplaces
   .chapter.flex Chapter 1
-  .chaptername Introduction
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p You’ll typically need to differentiate in other ways in addition to lowering the take rate.
+
+    %ol{ start: "2"} 
+      %li 
+        %h5 Go vertical
+        %p A startup can unbundle a generalized marketplace and focus on creating the best product for a specific vertical. Many marketplaces have struck gold by picking one thing and doing it extremely well. For example: StubHub vs. Craigslist and HotelTonight vs. Expedia.
+        %p This is a strategy that has been spectacularly effective for many verticals and the market map that venture capitalist Andrew Parker’s created back in 2010 has become the blueprint for tracking the different companies that have chosen to carve out niches from Craigslist. 
+        David Haber offered an updated chart at the end of 2012 to demonstrate just how effective the vertical strategy can be.
+        %p In some cases, marketplace businesses build traction in smaller verticals before expanding their reach. Geographical marketplaces often nail one location before expanding into new territories.
+        .right [contd.]
