--- a/manuscript/page-26/body.haml
+++ b/manuscript/page-26/body.haml
@@ -4,9 +4,10 @@
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %ol{ start: "2"} 
+      %li 
+        %p [contd.] Indiegogo first went after the indie film market before opening up to other categories. Expanding outward from the niche often happens organically as sellers start listing items in new categories. For example, Etsy sellers began listing craft supplies and tools and this category has become one of Etsy’s largest today.
+        %p  Keep in mind that category expansion doesn’t always work as planned. When Boris was COO at AbeBooks, he thought they could expand the site into new books. Despite a strong selection at competitive prices, the new books category never lived up to expectations and most of the buyers stayed with their existing retailers (mainly Amazon).
+      %li 
+        %h5 Develop a 10x better product
+        %p Another strategy is to build a product that’s ten times better than the incumbent’s. This has been the key to VarageSale’s success (one of our portfolio companies that has done a great job building mobile-first, social, and safe local marketplaces) vs. Craigslist. Or Uber’s success against the taxi industry. Or think about how Airbnb’s fortune changed when they started using professional photography.
