--- a/manuscript/page-15/body.haml
+++ b/manuscript/page-15/body.haml
@@ -1,6 +1,6 @@
 %header.tape.flex
+  .chaptername.right Introduction to Marketplaces
   .chapter.flex Chapter 1
-  .chaptername Introduction
 
 %main.leaf.flex
   .inner.justify
