--- a/manuscript/page-19/body.haml
+++ b/manuscript/page-19/body.haml
@@ -1,12 +1,14 @@
 %header.tape.flex
+  .chaptername.right Introduction to Marketplaces
   .chapter.flex Chapter 1
-  .chaptername Introduction
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %ol
+      %li 
+        %h5 High fragmentation
+        %p It’s much easier to start a marketplace when there are a lot of suppliers and buyers. When there are just a few suppliers, they’ll likely fight the arrival of a new intermediary in their market and won’t want to share in the economics (meaning a low take rate for your marketplace). In addition, a marketplace can create the most value in a highly fragmented market, since there’s a true need to help buyers and sellers find one another.
+      %li 
+        %h5 The buyer/seller relationship: monogamy vs. playing the field
+        %p In those markets where buyers are fiercely loyal and use the same supplier every time, the value of a marketplace is reduced. For example, once consumers find a doctor or cleaning service they like and trust, it’s easier to stick with the known provider rather than take a chance on, or spend time searching for, someone new.
+        %p Once consumers are comfortable with a certain provider, there’s little need to visit or use the marketplace again. The same is also true for…
