--- a/manuscript/page-20/body.haml
+++ b/manuscript/page-20/body.haml
@@ -4,9 +4,17 @@
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+
+    %p …commoditized products where you source products from the same supplier (e.g. diapers on the consumer side and raw materials for businesses).
+
+    %ol{ start: "3"}
+      %li 
+        %h5 Higher frequency
+        %p Bill Gurley said, “All things being equal, a higher frequency is obviously better. GrubHub, OpenTable, 1stdibs (for the designer) and Uber are all high frequency use cases, where consumers can rely on the marketplace as a utility. Many failed marketplaces attack purchasing cycles that are simply way too infrequent, which makes it much more difficult to build brand awareness and word-of-mouth customer growth.”
+        %p 
+          When evaluating frequency, it’s important to differentiate between how often a buyer users a service and how often they use the marketplace. For example, you might need a babysitter every day, but you only look for a new babysitter every two years (back to point 
+          %a{ class: "page", href: "19"} #2
+          ).
+
+
+
