--- a/manuscript/page-22/body.haml
+++ b/manuscript/page-22/body.haml
@@ -4,9 +4,9 @@
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %ol{ start: "6"}
+      %li 
+        %h5 The ability to expand the overall market and create value
+        %p Virtually all marketplaces create efficiency: they make it easier for buyers and sellers to find each other and complete a transaction. But, not all marketplaces create value equally. For example, marketplaces may connect schools with substitute teachers, visiting doctors with hospitals, commercial landlords with retailers interested in setting up pop-up shops.
+        %p These all certainly increase efficiency, but they might not necessarily expand the market. The likely reason is because there’s finite supply and finite demand. In other words, a new marketplace won’t create a new crop of teacher or doctors, or school and hospitals. And in the absence of a new online marketplace, both sides would probably find each other eventually, albeit in a less efficient way.
+        %p The best marketplaces can tap into new groups of participants and grow the overall number of transactions. The sharing economy is a great example of creating value. People who never thought they’d be landlords or hotel proprietors are now hosts on Airbnb. 
