--- a/manuscript/page-24/body.haml
+++ b/manuscript/page-24/body.haml
@@ -4,9 +4,11 @@
 
 %main.leaf.flex
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %ol 
+      %li 
+        %h5 Lower the take rate
+        %p According to Albert Wenger of Union Square Ventures:
+        %blockquote
+          %em I don’t see take rates of 20% or more as sustainable in the long run. Why? Because they (a) impose too heavy a tax on marketplace activity and (b) produce too much profitability for the marketplace operator. The first is bad from the perspective of efficiency as it will crowd out some transactions that would benefit from taking place in the market. The second will provide the incentive for competing marketplaces to be created.
+        %p For example, Craigslist offered free listings to compete with the paid listings in the traditional classified sections of newspapers. Applying Clayton Christensen’s theory of the Innovator’s Dilemma, most incumbents find it hard to follow down the market. They brush off an upstart as being too small or too low end to matter. By the time the incumbent finally gets around to addressing the new innovator, the upstart has already found traction.
+        %p However, unseating an incumbent based on lower take rate alone is difficult, since the network effects of the existing marketplace will make it hard for a newcomer to build any momentum. 
