--- a/manuscript/page-27/body.haml
+++ b/manuscript/page-27/body.haml
@@ -1,12 +1,8 @@
 %header.tape.flex
+  .chaptername.right Introduction to Marketplaces
   .chapter.flex Chapter 1
-  .chaptername Introduction
 
-%main.leaf.flex
+%main.leaf
   .inner.justify
-    %h1 New York
-    .subhead York, MA - Friday March 18, 2016 - Seven Leafs
-    .subhead
-      by
-      %span.uppercase Marvin Von Danig Goethe
-    %p When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary, I throw myself down among the tall grass by the trickling stream;
+    %p Keep in mind that sometimes a 10x better product itself isn’t enough. Benchmark’s Sarah Tavel wrote that multi-billion dollar businesses build a 10x better product while also recasting incumbent cost structures. In other words, a better product might not be enough if only the very wealthy will be willing or able to afford the service or convenience. She wrote that “a 10x product and save people money” is the undercurrent running through dozens of breakout companies, including Uber, Airbnb, and WhatsApp.
+    %p Lastly, these kinds of opportunities are rare and hard to pull off, because the incumbent’s network effects often outweigh any product improvements.
