--- a/manuscript/page-16/body.haml
+++ b/manuscript/page-16/body.haml
@@ -1,7 +1,6 @@
 %header.tape.flex
   .chapter.flex Chapter 1
-  .chaptername Introduction
-
+  .chaptername Introduction to Marketplaces
 %main.leaf
   .inner.justify
     %ul
